# oldMT01

./: ConfigFile.cpp  ConfigFile.h  DataTransfer.cpp  DataTransfer.h  Din16Dout8.cpp  Din16Dout8.h  EngineModbus.cpp  EngineModbus.h  EngineModbusRTU.cpp  EngineModbusTCP.cpp  EngineModbusTCPServer.cpp  KN24defs.cpp  KN24defs.h  Makefile  Makefile.am  Makefile.in  OverflowFile.cpp  OverflowFile.h  ParameterModbusFileKN24.cpp  ParameterModbusFileKN24.h  PostToServer.cpp  PostToServer.h  QueryMsg.cpp  QueryMsg.h  UMKA03utilites.cpp  UMKA03utilites.h  XMLAttribute.cpp  XMLAttribute.h  csv_reader.h  curlwrapper.cpp  curlwrapper.h  debug.h  device.cpp  device.h  deviceShunt.cpp  deviceShunt.h  devicemodbus.cpp  devicemodbus.h  devicemodemstat.cpp  devicemodemstat.h  (+41 more)
.deps/: bigbrother-ConfigFile.Po  bigbrother-DataTransfer.Po  bigbrother-Din16Dout8.Po  bigbrother-EngineModbus.Po  bigbrother-EngineModbusRTU.Po  bigbrother-EngineModbusTCP.Po  bigbrother-EngineModbusTCPServer.Po  bigbrother-KN24defs.Po  bigbrother-OverflowFile.Po  bigbrother-ParameterModbusFileKN24.Po  bigbrother-PostToServer.Po  bigbrother-QueryMsg.Po  bigbrother-UMKA03utilites.Po  bigbrother-XMLAttribute.Po  bigbrother-curlwrapper.Po  bigbrother-device.Po  bigbrother-deviceShunt.Po  bigbrother-devicemodbus.Po  bigbrother-devicemodemstat.Po  bigbrother-devicerecorder.Po  bigbrother-globals.Po  bigbrother-gpio.Po  bigbrother-main.Po  bigbrother-modem.Po  bigbrother-parameter.Po  bigbrother-parametermodbus.Po  bigbrother-parametermodbusbool.Po  bigbrother-parametermodbusenum.Po  bigbrother-parametermodbusfile.Po  bigbrother-parametermodbusfloat.Po  bigbrother-parametermodbusieee754.Po  bigbrother-parametermodbusieee754array.Po  bigbrother-port.Po  (+9 more)
