bin_PROGRAMS=bigbrother

bigbrother_SOURCES=main.cpp \
					globals.h globals.cpp \
					semaphors.h semaphors.cpp \
					utilites.h utilites.cpp \
					modem.h modem.cpp \
					port.h port.cpp \
                    portsettings.h portsettings.cpp \
					QueryMsg.h QueryMsg.cpp \
					scada.h scada.cpp \
					device.h device.cpp \
					devicemodbus.h devicemodbus.cpp \
                    deviceShunt.h deviceShunt.cpp \
					devicemodemstat.h devicemodemstat.cpp \
					Din16Dout8.h Din16Dout8.cpp \
					EngineModbus.h EngineModbus.cpp EngineModbusRTU.cpp EngineModbusTCP.cpp EngineModbusTCPServer.cpp \
					parameter.h parameter.cpp \
					parametermodbus.h parametermodbus.cpp \
					parametermodbusint.h parametermodbusint.cpp \
					parametermodbusbool.h parametermodbusbool.cpp \
					parametermodbusenum.h parametermodbusenum.cpp \
					parametermodbusfile.h parametermodbusfile.cpp \
					KN24defs.h KN24defs.cpp \
					ParameterModbusFileKN24.h ParameterModbusFileKN24.cpp \
					parametermodbusws.h parametermodbusws.cpp \
					parametermodbusieee754.h parametermodbusieee754.cpp parametermodbusieee754array.cpp parametermodbusieee754matrix.cpp \
					server.h server.cpp \
                                        curlwrapper.h curlwrapper.cpp \
					UMKA03utilites.h UMKA03utilites.cpp \
					PostToServer.h PostToServer.cpp \
					DataTransfer.h DataTransfer.cpp \
					OverflowFile.h OverflowFile.cpp \
					ConfigFile.h ConfigFile.cpp \
					XMLAttribute.h XMLAttribute.cpp
bigbrother_CPPFLAGS = @BIGBROTHER_CFLAGS@
bigbrother_CXXFLAGS = @BIGBROTHER_CFLAGS@
bigbrother_LDADD = @BIGBROTHER_LIBS@
